# Med-STORM

./: package-lock.json  package.json
Med-STORM/: .gitignore  .pre-commit-config.yaml  ANÁLISIS_SITUACIÓN_MED_STORM.md  CONTRIBUTING.md  PRIVACY.md  README.md  TERMS.md  docker-compose.yml  empty_dirs_backup.txt  pyproject.toml  requirements-dev.txt  requirements.txt  sitecustomize.py
Med-STORM/config/: __init__.py  example.env  settings.py
Med-STORM/docs/: MED_STORM_EXCELLENCE_ENHANCEMENT_PLAN.md  STRATEGY.md  enhanced_features.md
Med-STORM/docs/quality_gate/: standards_comparison.md
Med-STORM/docs/source/: acknowledgments.rst  changelog.rst  code_of_conduct.rst  conf.py  contributing.rst  developer_roadmap.rst  index.rst  license.rst
Med-STORM/examples/: run_enhanced_storm.py  run_full_report.py  run_hybrid_storm.py  run_local_storm.py  run_revolutionary_storm.py  run_revolutionary_storm_demo.py  run_solid_storm.py  run_storm_enhanced.py  test_revolutionary.py
Med-STORM/qdrant_storage/: raft_state.json
Med-STORM/redis_data/: dump.rdb
Med-STORM/scripts/: corrected_diagnostic.py  create_corpus.py  diagnostic_performance_test.py  quick_diagnostic.py  surgical_diagnostic.py  test_fast_robustness.py  test_llm_provider.py  test_production_robustness.py  test_pubmed_connector.py  test_storm_engine.py
Med-STORM/src/: __init__.py
Med-STORM/tests/: test_conflict_scraper.py  test_enhanced_engine.py  test_evidence_scoring.py  test_grade_evaluator.py  test_personalized_recommender.py  test_quality_gate.py  test_statistical_indicators.py
(+127 files in other folders)
